hard-gists/1315148/run.log
=== Docker Run Log for 1315148 ===
Started at: Mi 29. Okt 12:06:55 CET 2025

[2025-10-29 12:06:56] START: Running container for 1315148
[2025-10-29 12:06:56] SUCCESS: Container 1fbc67d231e345de463a5f1a7fffa4877e805fb0b896490329600c40b7e489a3 started for 1315148
=== Container logs for 1315148 ===
  File "/snippet.py", line 23
    print html
    ^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1315148 ===
[2025-10-29 12:06:58] INFO: Container 1fbc67d231e345de463a5f1a7fffa4877e805fb0b896490329600c40b7e489a3 has stopped
